@@ -1,3 +1,13 @@
+2007-04-28  KUBO Takehiro  <kubo@jiubao.org>
+	* lib/oci8/oci8.rb: fetch NCLOB column value as an OCI8::NCLOB. fetch
+	    BINARY_DOUBLE and BINARY_FLOAT column as a Float.
+	* lib/oci8/metadata.rb: OCI8::Metadata::Column#data_type can return
+	    :nclob, :bfloat and :bdouble now.
+	* ext/oci8/extconf.rb: check whether OCILobCreateTemporary exists.
+	* ext/oci8/lob.c: add OCI8::NCLOB.
+	* ext/oci8/oci8.h: add oci8_make_nclob().
+	* ext/oci8/tdo.c: use oci8_make_nclob().
+
 2007-04-26  KUBO Takehiro  <kubo@jiubao.org>
 	* lib/oci8/oci8.rb: fetch BFILE as OCI8::BFILE.
 	* ext/oci8/lob.c: add OCI8::BFILE.
